# social-arb-investing

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
.github/workflows/: social_arb_engine.yml
data/: companies.json  current_signals.json  history.json  sp500.json
src/: debug_advanced_trends.py  debug_mmm.py  debug_reddit.py  debug_trends.py  debug_twitter.py  main_engine.py  verify_web_output.py
src/analysis/: bot_detector.py  entity_resolution.py  risk.py  sentiment.py
src/scrapers/: analyst.py  instagram.py  news.py  reddit.py  tiktok.py  trends.py  twitter.py  twitter_twikit.py  weather.py
src/ui/: tui.py
src/utils/: populate_db.py
web/: app.js  data.json  index.html  style.css
